Push all changes v1.0__

--- a/src/scratch-work/Untitled0.ipynb
+++ b/src/scratch-work/Untitled0.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/318.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m318.4/318.4 kB\u001b[0m \u001b[31m14.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/105.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.9/105.9 kB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -41,59 +27,56 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive',force_remount=True)"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "cIlQUxbzQP8G"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive',force_remount=True)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !git clone https://github.com/ashutoshtiwari13/trl.git"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "Xb0l9XiXQUQd"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# !git clone https://github.com/ashutoshtiwari13/trl.git"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.environ['HF_TOKEN'] = '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'\n",
-        "\n",
-        "#wandb token = 46c710301bbac9269e1dc48d64abb2d02c5e4dc8"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "Rz-gQfbtQVve"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.environ['HF_TOKEN'] = '<hidden>'\n",
+        "\n",
+        "#wandb token = <hidden>"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# import sys\n",
-        "# sys.path.append('/content/trl')"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "7qGKeCJfQXWN"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# import sys\n",
+        "# sys.path.append('/content/trl')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import trl\n",
-        "print(trl.__file__ )"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,41 +84,49 @@
         "id": "aN_bKcXmQY_u",
         "outputId": "07d4bbc0-1d9e-41eb-a358-9e195f9e3cb3"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/trl/__init__.py\n"
           ]
         }
+      ],
+      "source": [
+        "import trl\n",
+        "print(trl.__file__ )"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# %cd /content/trl"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "J_-ASOKEQaeX"
       },
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# %cd /content/trl"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !pip install -r requirements.txt"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "goBKwicPQa4O"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# !pip install -r requirements.txt"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "_C5X1_HsQcQj"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "from transformers import AutoTokenizer,AutoModelForCausalLM\n",
@@ -144,15 +135,15 @@
         "from trl.core import LengthSampler\n",
         "import numpy as np\n",
         "from typing import List, Dict"
-      ],
-      "metadata": {
-        "id": "_C5X1_HsQcQj"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {
+        "id": "d_pzrIynRvpU"
+      },
+      "outputs": [],
       "source": [
         "class SymbolicEnvironment:\n",
         "    def __init__(self, tokenizer, sentiment_analyzer):\n",
@@ -169,15 +160,15 @@
         "\n",
         "        feedback = [sentiment_score if sentiment_score > 0.5 else 1 - sentiment_score] * len(tokens)\n",
         "        return feedback"
-      ],
-      "metadata": {
-        "id": "d_pzrIynRvpU"
-      },
-      "execution_count": 64,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 76,
+      "metadata": {
+        "id": "M-iU7duZR2NW"
+      },
+      "outputs": [],
       "source": [
         "class RLSFTrainer:\n",
         "    def __init__(self, config: PPOConfig, model_name: str, symbolic_env: SymbolicEnvironment):\n",
@@ -290,15 +281,45 @@
         "\n",
         "        accuracy = correct / total\n",
         "        return {\"accuracy\": accuracy}"
-      ],
-      "metadata": {
-        "id": "M-iU7duZR2NW"
-      },
-      "execution_count": 76,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P6nWP2mRTImy",
+        "outputId": "1a848032-e182-4d4e-ee13-a48be0bfc8bc"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Debug: Dataset preparation complete\n",
+            "Debug: Dataset columns: ['label', 'input_ids']\n",
+            "Debug: Dataset features: {'label': ClassLabel(names=['neg', 'pos'], id=None), 'input_ids': Sequence(feature=Value(dtype='int32', id=None), length=-1, id=None)}\n",
+            "Debug: Shape of first item:\n",
+            "  label: torch.Size([])\n",
+            "  input_ids: torch.Size([512])\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Dataset({\n",
+              "    features: ['label', 'input_ids'],\n",
+              "    num_rows: 1000\n",
+              "})"
+            ]
+          },
+          "execution_count": 77,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def prepare_dataset(dataset, tokenizer, max_length=512):\n",
         "    def tokenize_and_truncate(examples):\n",
@@ -345,45 +366,15 @@
         "\n",
         "train_dataset = prepare_dataset(train_dataset, tokenizer)\n",
         "train_dataset"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P6nWP2mRTImy",
-        "outputId": "1a848032-e182-4d4e-ee13-a48be0bfc8bc"
-      },
-      "execution_count": 77,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Debug: Dataset preparation complete\n",
-            "Debug: Dataset columns: ['label', 'input_ids']\n",
-            "Debug: Dataset features: {'label': ClassLabel(names=['neg', 'pos'], id=None), 'input_ids': Sequence(feature=Value(dtype='int32', id=None), length=-1, id=None)}\n",
-            "Debug: Shape of first item:\n",
-            "  label: torch.Size([])\n",
-            "  input_ids: torch.Size([512])\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Dataset({\n",
-              "    features: ['label', 'input_ids'],\n",
-              "    num_rows: 1000\n",
-              "})"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 77
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 79,
+      "metadata": {
+        "id": "e5oYx6tzR65K"
+      },
+      "outputs": [],
       "source": [
         "def main():\n",
         "    # Load dataset\n",
@@ -438,12 +429,21 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
-      ],
-      "metadata": {
-        "id": "e5oYx6tzR65K"
-      },
-      "execution_count": 79,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
